[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "datatransport"
dynamic = ["version"]
description = "Data Transport Network"
readme = "README.rst"
requires-python= ">= 3.9"
license = { file = "LICENSE" }
authors = [
    { name= 'Todd Valentic', email='todd.valentic@gmail.com' }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

dependencies = [
    "python-dateutil",
    "pytimeparse2",
    "sapphire_config",
    "texttable",
    "importlib_resources>1.3; python_version < '3.10'"
]

[project.optional-dependencies]
devel = [
    'black',
    'build',
    'pyfakefs',
    'pylint',
    'pytest',
    'black',
    ]

[project.urls]
homepage="https://github.com/valentic/datatransport"
repository="https://github.com/valentic/datatransport"

[project.scripts]
    archivegroups = "datatransport.components.archivegroups:main"
    directoryservice = "datatransport.components.directoryservice:main"
    diskmonitor = "datatransport.components.DiskMonitor:main"
    filepost = "datatransport.components.FilePost:main"
    filestore = "datatransport.components.FileStore:main"
    filewatch = "datatransport.components.filewatch:main"
    groupcontrol = "datatransport.components.GroupControl:main"
    instrumentstatus = "datatransport.components.InstrumentStatus:main"
    newsgateway = "datatransport.components.NewsGateway:main"
    newsgroupmonitor = "datatransport.components.NewsgroupMonitor:main"
    plottool = "datatransport.components.PlotTool:main"
    postdatafiles = "datatransport.components.PostDataFiles:main"
    realtimefeed = "datatransport.components.RealTimeFeed:main"
    resourcemonitor = "datatransport.components.ResourceMonitor:main"
    watchurl = "datatransport.components.WatchURL:main"

    cancelnewsgroup = "datatransport.commands.cancelnewsgroup:main"
    console = "datatransport.commands.console:main"
    listnewsgroups = "datatransport.commands.listnewsgroups:main"
    transportctl = "datatransport.commands.transportctl:main"
    transportd = "datatransport.commands.transportd:main"
    transport-create-app = "datatransport.commands.transport_create_app:main"
    transportps = "datatransport.commands.transportps:main"
    viewlog = "datatransport.commands.viewlog:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "datatransport.metadata.__version__"}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]

